# serializer version: 1
# name: test_all_entities[number.model0_comfort_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.model0_comfort_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Comfort temperature',
    'platform': 'vicare',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'comfort_temperature',
    'unique_id': 'gateway0_deviceSerialVitodens300W-comfort_temperature-0',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[number.model0_comfort_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'model0 Comfort temperature',
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.model0_comfort_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_all_entities[number.model0_comfort_temperature_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.model0_comfort_temperature_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Comfort temperature',
    'platform': 'vicare',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'comfort_temperature',
    'unique_id': 'gateway0_deviceSerialVitodens300W-comfort_temperature-1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[number.model0_comfort_temperature_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'model0 Comfort temperature',
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.model0_comfort_temperature_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_all_entities[number.model0_dhw_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.model0_dhw_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'DHW temperature',
    'platform': 'vicare',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'dhw_temperature',
    'unique_id': 'gateway0_deviceSerialVitodens300W-dhw_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[number.model0_dhw_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'model0 DHW temperature',
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.model0_dhw_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_all_entities[number.model0_heating_curve_shift-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 40,
      'min': -13,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.model0_heating_curve_shift',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Heating curve shift',
    'platform': 'vicare',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'heating_curve_shift',
    'unique_id': 'gateway0_deviceSerialVitodens300W-heating curve shift-0',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[number.model0_heating_curve_shift-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'model0 Heating curve shift',
      'max': 40,
      'min': -13,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.model0_heating_curve_shift',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_all_entities[number.model0_heating_curve_shift_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 40,
      'min': -13,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.model0_heating_curve_shift_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Heating curve shift',
    'platform': 'vicare',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'heating_curve_shift',
    'unique_id': 'gateway0_deviceSerialVitodens300W-heating curve shift-1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[number.model0_heating_curve_shift_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'model0 Heating curve shift',
      'max': 40,
      'min': -13,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.model0_heating_curve_shift_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_all_entities[number.model0_heating_curve_slope-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 3.5,
      'min': 0.2,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.model0_heating_curve_slope',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Heating curve slope',
    'platform': 'vicare',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'heating_curve_slope',
    'unique_id': 'gateway0_deviceSerialVitodens300W-heating curve slope-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[number.model0_heating_curve_slope-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'model0 Heating curve slope',
      'max': 3.5,
      'min': 0.2,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.1,
    }),
    'context': <ANY>,
    'entity_id': 'number.model0_heating_curve_slope',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_all_entities[number.model0_heating_curve_slope_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 3.5,
      'min': 0.2,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.model0_heating_curve_slope_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Heating curve slope',
    'platform': 'vicare',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'heating_curve_slope',
    'unique_id': 'gateway0_deviceSerialVitodens300W-heating curve slope-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[number.model0_heating_curve_slope_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'model0 Heating curve slope',
      'max': 3.5,
      'min': 0.2,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.1,
    }),
    'context': <ANY>,
    'entity_id': 'number.model0_heating_curve_slope_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_all_entities[number.model0_normal_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.model0_normal_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Normal temperature',
    'platform': 'vicare',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'normal_temperature',
    'unique_id': 'gateway0_deviceSerialVitodens300W-normal_temperature-0',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[number.model0_normal_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'model0 Normal temperature',
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.model0_normal_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_all_entities[number.model0_normal_temperature_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.model0_normal_temperature_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Normal temperature',
    'platform': 'vicare',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'normal_temperature',
    'unique_id': 'gateway0_deviceSerialVitodens300W-normal_temperature-1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[number.model0_normal_temperature_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'model0 Normal temperature',
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.model0_normal_temperature_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_all_entities[number.model0_reduced_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.model0_reduced_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Reduced temperature',
    'platform': 'vicare',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reduced_temperature',
    'unique_id': 'gateway0_deviceSerialVitodens300W-reduced_temperature-0',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[number.model0_reduced_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'model0 Reduced temperature',
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.model0_reduced_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_all_entities[number.model0_reduced_temperature_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.model0_reduced_temperature_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Reduced temperature',
    'platform': 'vicare',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reduced_temperature',
    'unique_id': 'gateway0_deviceSerialVitodens300W-reduced_temperature-1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[number.model0_reduced_temperature_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'model0 Reduced temperature',
      'max': 100.0,
      'min': 0.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.model0_reduced_temperature_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
